FEAT: Complete drink management system v1.0 - Implemented admin dashboard with report generation - Added all controllers (branch, customer, order) - Completed database layer (OrderDao, UsersDAO) - Established domain models (Branch, Drink, Order) - Implemented report service with custom exceptions - Included all FXML views